refactor (#8)